Metallb L2 advertisment was dropping, use Servicelb to bind ports to host instead

--- a/ansible/kluster-setup.yml
+++ b/ansible/kluster-setup.yml
@@ -5,8 +5,8 @@
   roles:
     - node-prep
 
-# - name: Install k3s
-#   hosts: kluster
-#   become: yes
-#   roles:
-#     - install-k3s
+- name: Install k3s
+  hosts: kluster
+  become: yes
+  roles:
+    - install-k3s
