--- a/ansible/roles/node-prep/handlers/main.yml
+++ b/ansible/roles/node-prep/handlers/main.yml
@@ -6,9 +6,5 @@
     connect_timeout: 10
 
 - name: Restart UFW
-  ansible.builtin.service:
-    name: ufw
-    state: started
-    enabled: yes
-    force: yes
-    daemon_reload: yes 
+  community.general.ufw:
+    state: reloaded
