Pre-create app namepsace

--- a/ansible/roles/node-prep/handlers/main.yml
+++ b/ansible/roles/node-prep/handlers/main.yml
@@ -8,3 +8,8 @@
 - name: Restart UFW
   community.general.ufw:
     state: reloaded
+
+- name: Restart networking
+  ansible.builtin.service:
+    name: systemd-networkd
+    state: restarted
