--- a/ansible/group_vars/kluster.yml
+++ b/ansible/group_vars/kluster.yml
@@ -10,3 +10,4 @@ k3s_cidr: "10.42.0.0/16"
 k3s_cidr_2: "10.43.0.0/16"
 network_cidr_ipv6: "{{ lookup('ansible.builtin.env', 'NETWORK_CIDR_IPV6') }}"
 network_cidr_ipv6_2: "{{ lookup('ansible.builtin.env', 'IP_V6_ULA') }}"
+k3s_version: v1.33.1+k3s1
