--- a/ami/packer-variables.hcl.example
+++ b/ami/packer-variables.hcl.example
@@ -2,9 +2,10 @@
 # Copy this file to packer-variables.hcl and fill in your values
 
 aws_region      = "us-east-1"
+source_ami_id   = "ami-1234567890abcdef0"  # Base RHEL AMI with custom certificates
 kms_key_id      = "arn:aws:kms:us-east-1:123456789012:key/12345678-1234-1234-1234-123456789012"
 target_accounts = ["123456789012", "234567890123", "345678901234"]
-ami_name_prefix = "alma-linux-provisioned"
+ami_name_prefix = "rhel-provisioned"
 instance_type   = "t3.medium"
 
 # Optional: Network configuration
