--- a/bsx-jobs/templates/job.yaml
+++ b/bsx-jobs/templates/job.yaml
@@ -1,32 +1,40 @@
 {{- range $index, $job := .Values.jobs }}
 {{- $jobName := index $job "job-name" }}
+{{- $jobCommand := index $job "commands" }}
+{{- $jobImage := index $job "image-override" }}
 {{- if $jobName }}
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ $jobName }}-{{ randAlphaNum 5 | lower }}
+  name: {{ $jobName | quote}}
   labels:
-    app.kubernetes.io/name: {{ index $.Values "app-name" | default "bsx-jobs" }}
-    app.kubernetes.io/component: job
-    app.kubernetes.io/instance: {{ $.Release.Name }}
+    "app.kubernetes.io/name": {{ index $.Values "app-name" | default "bsx-jobs" | quote }}
+    "app.kubernetes.io/component": job
+  annotations:
+    "argocd.argoproj.io/hook": PostSync
+    "argocd.argoproj.io/hook-delete-policy": BeforeHookCreation
 spec:
   ttlSecondsAfterFinished: 300
   backoffLimit: 4
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/name: {{ index $.Values "app-name" | default "bsx-jobs" }}
-        app.kubernetes.io/component: job
-        app.kubernetes.io/instance: {{ $.Release.Name }}
     spec:
-      restartPolicy: OnFailure
+    restartPolicy: Never
       containers:
-        - name: {{ $jobName }}
-          image: {{ include "bsx-jobs.image" (dict "root" $ "job" $job) }}
-          {{- with $job.commands }}
-          args:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+        - name: {{ $jobName | quote }}
+          image: {{ $jobImage | default $.Values.image | quote }}
+          command: |-
+            {{- range $jobCommand }}
+            - {{ . | quote}}
+            {{- end }}
+          envFrom:
+            - secretRef:
+              name: bsx-secret
+          resources:
+            requests:
+              cpu: 250m
+              memory: 512Mi 
+            limits:
+              cpu: 1000m
+              memory: 2Gi
 {{- end }}
 {{- end }}
